fix Accessibility background and color insufficient contrast ratio

--- a/src/main.css
+++ b/src/main.css
@@ -1,5 +1,5 @@
 :root {
-  --primary-color: #2597cb;
+  --primary-color: #1979a4;
   --default-size: 20px;
 }
 
